<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nadia\'s</string>

    <string name="action_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="action_display_all">Display all</string>
    <string name="action_choose_category">Choose category</string>

    <string name="prompt_email">Email: </string>
    <string name="prompt_password">Password: </string>
    <string name="login_button">Login</string>

    <string name="display_in_grid">Display in grid</string>

    <!-- Keys -->
    <string name="pref_display_grid">pref_display_grid</string>

    <string-array name="categories">
        <item>Salads</item>
        <item>Starters</item>
        <item>Entrees</item>
        <item>Desserts</item>
        <item>Drinks</item>
    </string-array>
</resources>
