<?xml version="1.0" encoding="UTF-8"?>
<menu 
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".MainActivity"
	>
	<item
		android:id="@+id/action_login"
		android:title="@string/action_login"
		android:orderInCategory="0"
		app:showAsAction="ifRoom"
		/>

	<item 
		android:id="@+id/action_settings"
		android:title="@string/action_settings"
		app:showAsAction="ifRoom"
		/>		
		<!-- app:showAsAction="always" -->
	<item 
		android:id="@+id/action_export"
		android:title="@string/action_export"
		android:orderInCategory="101"
		app:showAsAction="never"
		/>	
	<item 
		android:id="@+id/action_import"
		android:title="@string/action_import"
		android:orderInCategory="102"
		app:showAsAction="never"
		/>		

	<item 
		android:id="@+id/action_display_all"
		android:title="@string/action_display_all"
		android:orderInCategory="103"
		app:showAsAction="never"
		/>	

	<item
		android:id="@+id/action_choose_category"
		android:title="@string/action_choose_category"
		android:orderInCategory="104"
		app:showAsAction="never"
		/>	
</menu>
