<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://scehmas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	android:paddingBottom="16dp"
	android:paddingTop="16dp"
	android:paddingRight="16dp"
	android:paddingLeft="16dp"
	tools:context="com.nadia.LoginActivity"
	>
	<ScrollView 
		android:id="@+id/login_form"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		>
		<LinearLayout
			android:id="@+id/email_login_form"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>
			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				>
				<EditText 
					android:id="@+id/email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_email"
					android:inputType="textEmailAddress"
					android:maxLines="1"
					android:singleLine="true"
					/>
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				>
				<EditText 
					android:id="@+id/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_password"
					android:inputType="textPassword"
					android:maxLines="1"
					android:singleLine="true"
					/>

			</android.support.design.widget.TextInputLayout>

			<Button 
				android:id="@+id/loginButton"
				style="?android:textAppearanceSmall"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginTop="16dp"
				android:text="@string/login_button"
				android:textStyle="bold"
				/>
		</LinearLayout>

	</ScrollView>

</LinearLayout>